# footswitch_bazel

./: BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  footswitch_demo.py
tools/workspace/: default.bzl
tools/workspace/rgerganov_footswitch/: BUILD.bazel  README.md  repository.bzl
