py_library(
    name = "module_py",
    srcs = ["__init__.py"],
)

py_library(
    name = "footswitch_py",
    srcs = ["footswitch.py"],
    deps = [":module_py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "footswitch_demo",
    srcs = ["footswitch_demo.py"],
    deps = [":footswitch_py"],
    visibility = ["//visibility:public"],
)
